--- a/index.html
+++ b/index.html
@@ -18,13 +18,21 @@
         canvas {
             border: 1px solid #fff;
         }
+        #score {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            font-size: 24px;
+        }
     </style>
 </head>
 <body>
+    <div id="score">Score: 0</div>
     <canvas id="gameCanvas" width="480" height="640"></canvas>
     <script>
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
+        const scoreElement = document.getElementById('score');
 
         const SCREEN_WIDTH = canvas.width;
         const SCREEN_HEIGHT = canvas.height;
@@ -34,6 +42,8 @@
         const ITEM_HEIGHT = 20;
         const ITEM_FALL_SPEED = 5;
         const PLAYER_SPEED = 10;
+
+        let score = 0;
 
         let player = {
             x: (SCREEN_WIDTH - PLAYER_WIDTH) / 2,
@@ -72,6 +82,8 @@
                     item.y < player.y + player.height &&
                     item.y + item.height > player.y) {
                     items.splice(index, 1);
+                    score++;
+                    scoreElement.textContent = `Score: ${score}`;
                 }
             });
 
@@ -96,4 +108,3 @@
     </script>
 </body>
 </html>
-
