--- a/index.html
+++ b/index.html
@@ -14,15 +14,21 @@
             background-color: #000;
             color: #fff;
             font-family: Arial, sans-serif;
+            position: relative;
         }
         canvas {
             border: 1px solid #fff;
+            position: relative;
         }
         #score {
             position: absolute;
-            top: 10px;
-            left: 10px;
+            top: 140px;
+            right: 1090px;
             font-size: 24px;
+            color: #fff;
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 5px 10px;
+            border-radius: 5px;
         }
     </style>
 </head>
