--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             display: none;
         }
         h1 { font-size: 32px; margin: 0; }
+        p { margin: 10px 0; font-size: 24px; }
         .button {
             margin-top: 20px;
             padding: 10px 20px;
@@ -75,6 +76,7 @@
     <div id="game-container">
         <div id="welcome-screen">
             <h1>Welcome to Osu! Game</h1>
+            <p>Total points: <span id="total-points">0</span></p>
             <button id="play-button" class="button">Play</button>
         </div>
         <div id="score">Score: 0</div>
@@ -84,6 +86,7 @@
             <h1>Game Over</h1>
             <p id="final-score"></p>
             <button id="restart-button" class="button">Restart</button>
+            <button id="exit-button" class="button">Exit to Welcome Screen</button>
         </div>
     </div>
     <script>
@@ -96,11 +99,16 @@
         const finalScoreElement = document.getElementById('final-score');
         const playButton = document.getElementById('play-button');
         const restartButton = document.getElementById('restart-button');
+        const exitButton = document.getElementById('exit-button');
+        const totalPointsElement = document.getElementById('total-points');
         const ITEM_RADIUS = 13;
         const ITEM_HITBOX_RADIUS = 26;
         const ITEM_FALL_SPEED = 322; // Pixels per second
         const GAME_DURATION = 15;
         let score, timeLeft, gameRunning, items, lastTimestamp;
+        let totalPoints = parseInt(localStorage.getItem('totalPoints')) || 0;
+
+        totalPointsElement.textContent = totalPoints;
 
         function resizeCanvas() {
             const container = document.getElementById('game-container');
@@ -191,10 +199,17 @@
             timerElement.style.display = 'none';
             endScreen.style.display = 'flex';
             finalScoreElement.textContent = `Your score is ${score}`;
+            totalPoints += score;
+            localStorage.setItem('totalPoints', totalPoints);
+            totalPointsElement.textContent = totalPoints;
         }
 
         playButton.addEventListener('click', startGame);
         restartButton.addEventListener('click', startGame);
+        exitButton.addEventListener('click', () => {
+            endScreen.style.display = 'none';
+            welcomeScreen.style.display = 'flex';
+        });
     </script>
 </body>
 </html>
